hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__while_expected_boolean_condition_got_no_type.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Condition expected to be of type boolean, got no type",
                span: 1:7; [6, 42],
                level: Error,
            },
        ],
        inputs: (),
    },
)
