hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__while_expected_boolean_condition_got_number_expr_binary.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Condition expected to be of type boolean, got number",
                span: 1:7; [6, 12],
                level: Error,
            },
        ],
        inputs: (),
    },
)
